initialize in-memory stats to default values